# Rex

./: .gitignore  Dockerfile.linux  LICENSE  README.md  build.sh  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: account.rs  auth.rs  mcp.rs  mod.rs  platform.rs  sessions.rs  stats.rs  terminal.rs  tray.rs  usage.rs
src-tauri/src/models/: account.rs  mcp.rs  mod.rs  session.rs  stats.rs  usage.rs
src-tauri/src/services/: account_reader.rs  anthropic_client.rs  credentials.rs  mcp_checker.rs  mod.rs  session_parser.rs  stats_reader.rs  terminal_launcher.rs  wsl.rs
src/components/connection/: ConnectionForm.tsx  DirectoryPicker.tsx
src/components/dashboard/: ConversationViewer.tsx  SessionItem.tsx  SessionList.tsx  StatsOverview.tsx  UsageCard.tsx  WeeklyUsageCard.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx  TitleBar.tsx
src/components/ui/: ActivityRings.tsx  AnimateIn.tsx  Badge.tsx  Button.tsx  Card.tsx  CircularProgress.tsx  Icon.tsx  Input.tsx  Modal.tsx  ProgressBar.tsx  SegmentedControl.tsx  Skeleton.tsx  Spinner.tsx  Toggle.tsx  UsageLegendRow.tsx
src/hooks/: useAutoRefresh.ts  useConversation.ts  usePlatform.ts  useTheme.ts
src/lib/: platform.ts
src/pages/: ConnectionPage.tsx  DashboardPage.tsx  HistoryPage.tsx  McpStatusPage.tsx  ProjectsPage.tsx  SettingsPage.tsx  TrayPage.tsx  UsagePage.tsx
src/services/: api.ts  notifications.ts  store.ts  trayIcon.ts
src/stores/: useAccountStore.ts  useConnectionStore.ts  useMcpStore.ts  useSessionStore.ts  useSettingsStore.ts  useStatsStore.ts  useUsageStore.ts
src/types/: account.ts  mcp.ts  session.ts  settings.ts  stats.ts  usage.ts
src/utils/: constants.ts  formatters.ts
