[package]
name = "rex"
version = "0.1.0"
description = "Rex - Claude Code Dashboard"
authors = ["you"]
edition = "2021"

[lib]
name = "rex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["fs", "io-util", "process"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSColor", "NSWindow", "NSResponder", "NSView", "objc2-quartz-core"] }
objc2-quartz-core = { version = "0.3", features = ["CALayer"] }
raw-window-handle = "0.6"
window-vibrancy = "0.7"
